--- a/src/layouts/Post.astro
+++ b/src/layouts/Post.astro
@@ -46,7 +46,7 @@ const toc = buildTOC(headings);
                     <p>
                         {isValid(date) && <Time dateTime={date} format="d MMMM yyyy" />}
                     </p>
-                    <hr />
+                    <div class="hline" />
                     {frontmatter.slides &&
                             <p class="text-yellow-300 my-4 italic">This content may require a PDSB account.</p>
                     }
