--- a/src/pages/game-jam.astro
+++ b/src/pages/game-jam.astro
@@ -26,7 +26,7 @@ import GameJamFaq from "../components/GameJamFaq";
                         <strong class="icon-text"><LuCherry />Theme: </strong>
                         <span>Comes in Pairs</span>
                     </div>
-                    <hr class="my-8" />
+                    <div class="hline my-8" />
                     <div class="flex flex-col gap-4">
                         <p>
                             This year, we want you to think of duos, doubles, and twins&mdash;&mdash;things
@@ -42,10 +42,10 @@ import GameJamFaq from "../components/GameJamFaq";
                         <GameJamActions client:load />
 
                     </div>
-                    <hr class="my-8" />
+                    <div class="hline my-8" />
                     <h2 class="text-3xl font-bold mb-4">Schedule</h2>
                     <Meetings client:load />
-                    <hr class="my-8" />
+                    <div class="hline my-8" />
                     <h2 class="text-3xl font-bold mb-4">FAQ</h2>
                     <GameJamFaq client:load />
                 </div>
