--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,7 +28,7 @@ Join us weekly for lessons, workshops, and contests.
     <main class="p-4 pt-0 lg:pt-4 h-full min-w-0 max-w-full w-7xl flex flex-col lg:mr-4 gap-4" >
         <Pane trafficLight={false} className="outline-1 outline-neutral-800 overflow-clip">
             <HeroHeading client:load />
-            <div class="p-5 flex flex-col gap-4 items-start bg-zinc-900">
+            <div class="p-5 flex flex-col gap-4 items-start bg-zinc-900 pt-8 inset-shadow-[0_30px_30px_-20px_black]">
                 <h2 class="text-3xl font-bold mb md:px-12">Latest Updates</h2>
                 <NewsBar client:load>
                     {posts.map((p, idx) => <NewsItem href={"/posts/" + p.id}>
