--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -14,6 +14,13 @@ const {title, description} = Astro.props;
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content={description} />
     <title>{title}</title>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5SHW61T225"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'G-5SHW61T225');
+    </script>
 </head>
 <body class="min-w-0 bg-neutral-950 flex mx-auto justify-center items-start flex-col lg:flex-row lg:gap-8 h-auto">
 <slot />
