--- a/src/pages/game-jam.astro
+++ b/src/pages/game-jam.astro
@@ -6,7 +6,7 @@ import {FaRegClock} from "react-icons/fa6";
 import {LuCherry} from "react-icons/lu";
 import Meetings from "../components/Meetings";
 import Pane from "../components/Pane";
-import {GameJamActions, GameJamCountdown} from "../components/GameJam";
+import {GameJamCountdown} from "../components/GameJam";
 import gameJamPoster from "../assets/GameJam.png";
 import {Image} from "astro:assets";
 import Footer from "../components/Footer";
