--- a/src/pages/game-jam.astro
+++ b/src/pages/game-jam.astro
@@ -44,7 +44,7 @@ import { FaExternalLinkAlt } from "react-icons/fa";
 
                         
                         <div class="flex flex-col gap-4 items-start mt-4 max-w-full flex-wrap">
-                            <a href="https://itch.io/jam/woodlands-cs-club-jam-2025" class="btn" role="button">View on Itch <FaExternalLinkAlt /></a>
+                            <a href="https://itch.io/jam/woodlands-cs-club-jam-2025" class="btn" role="button">View on Itch.io <FaExternalLinkAlt /></a>
                         </div>
 
                     </div>
