--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -49,24 +49,32 @@ Join us weekly for lessons, workshops, and contests.
                 <a href="/posts" class="text-center mx-auto icon-text">View all <FaAngleRight /></a>
             </div>
             <div class="hline mx-5 sm:mx-17 my-8" />
+            <div class="flex flex-col max-w-xl mx-13">
+                <h2 class="text-3xl font-bold" id="calendar">Calendar</h2>
+                <Meetings client:load showNextMeeting />
+            </div>
+            <div class="hline my-8 mx-13" />
             <div class="flex flex-col-reverse xl:flex-row items-start px-5 md:px-17">
-                <div>
+                    <div>
                     <div class="flex flex-col gap-4 max-w-3xl items-start">
                         <h2 class="text-3xl font-bold" id="game-jam">Game Jam 2025</h2>
-                        <p>This month, we're once again hosting our annual game jam! The theme this year is <strong>Comes in Pairs</strong>.</p>
-                        <p>Are you passionate about art, modeling, music, or coding? Have you always wanted to make a game of your very own?
+                        <p>Our game jam this year was a great success! The theme was is <strong>Comes in Pairs</strong>.</p>
+                        <p>
+                            We received eight outstanding submissions and were incredibly impressed with everyone's creative use
+                            of the theme. Congratulations to all who participated! Prizes for the winners will be distributed next Monday. 
+                        </p>
+                        <!--<p>Are you passionate about art, modeling, music, or coding? Have you always wanted to make a game of your very own?
                             Come join us in Room 100, where we'll teach you how to use the <strong>Godot Game Engine</strong>&mdash;&mdash;no
                             technical or gamedev experience necessary.</p>
                         <p class="text-foreground-dimmed text-sm"><i>Submissions are due on <Time format="MMMM dd" dateTime={gameJamEndDate} />.</i></p>
-                        <a href="/game-jam" class="btn" role="button">Details <FaAngleRight /></a>
+                             -->
+                        <div class="flex flex-row flex-wrap gap-8">
+                            <a href="/game-jam" class="btn border-brand text-brand shadow-brand" role="button">View the Winners <FaAngleRight /></a>
+                            <a href="/game-jam" class="btn" role="button">Details <FaAngleRight /></a>
+                        </div>
                     </div> 
-                    <div class="hline my-8" />
-                    <div class="flex flex-col max-w-xl">
-                        <h2 class="text-3xl font-bold" id="calendar">Calendar</h2>
-                        <Meetings client:load showNextMeeting />
-                    </div>
                 </div>
-                <Image priority alt="Game jam poster" src={gameJamImage} class="xl:sticky xl:top-8 w-full sm:max-w-5/7 mx-auto xl:max-w-3/7 mb-8 xl:my-0 xl:ml-12" />
+                <Image priority alt="Game jam poster" src={gameJamImage} class="xl:sticky xl:top-8 w-full sm:max-w-5/7 mx-auto xl:max-w-2/5 mb-8 xl:my-0 xl:ml-12" />
             </div>
             <div class="hline mx-5 sm:mx-17 my-8" />
             <div class="flex flex-col-reverse xl:flex-row items-center justify-between pt-0 p-5 sm:px-17">
