--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -69,7 +69,7 @@ Join us weekly for lessons, workshops, and contests.
                         <p class="text-foreground-dimmed text-sm"><i>Submissions are due on <Time format="MMMM dd" dateTime={gameJamEndDate} />.</i></p>
                              -->
                         <div class="flex flex-row flex-wrap gap-8">
-                            <a href="https://itch.io/jam/woodlands-cs-club-jam-2025/results" class="btn border-brand text-brand shadow-brand" role="button">View the Games <FaAngleRight /></a>
+                            <a href="/posts/2025-10-25-game-jam-results" class="btn border-brand text-brand shadow-brand" role="button">Results <FaAngleRight /></a>
                             <a href="/game-jam" class="btn" role="button">Details <FaAngleRight /></a>
                         </div>
                     </div> 
