--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -58,7 +58,7 @@ Join us weekly for lessons, workshops, and contests.
                     <div>
                     <div class="flex flex-col gap-4 max-w-3xl items-start">
                         <h2 class="text-3xl font-bold" id="game-jam">Game Jam 2025</h2>
-                        <p>Our game jam this year was a great success! The theme was is <strong>Comes in Pairs</strong>.</p>
+                        <p>Our game jam this year was a great success! The theme was <strong>Comes in Pairs</strong>.</p>
                         <p>
                             We received eight outstanding submissions and were incredibly impressed with everyone's creative use
                             of the theme. Congratulations to all who participated! Prizes for the winners will be distributed next Monday. 
