--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -14,6 +14,15 @@ const {title, description} = Astro.props;
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content={description} />
     <title>{title}</title>
+    <script type="application/ld+json">
+        {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Woodlands Computer Science",
+        "url": "https://twss.dev",
+        "logo": "https://twss.dev/logo.png"
+        }
+    </script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-5SHW61T225"></script>
     <script>
         // @ts-ignore
