--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -48,12 +48,12 @@ Join us weekly for lessons, workshops, and contests.
                 </NewsBar>
                 <a href="/posts" class="text-center mx-auto icon-text">View all <FaAngleRight /></a>
             </div>
-            <div class="hline mx-5 sm:mx-17 my-8" />
-            <div class="flex flex-col max-w-xl mx-13">
+            <div class="hline mx-5 sm:mx-13 my-8" />
+            <div class="flex flex-col max-w-xl mx-5 sm:mx-13">
                 <h2 class="text-3xl font-bold" id="calendar">Calendar</h2>
                 <Meetings client:load showNextMeeting />
             </div>
-            <div class="hline my-8 mx-13" />
+            <div class="hline my-8 mx-5 sm:mx-13" />
             <div class="flex flex-col-reverse xl:flex-row items-start px-5 md:px-17">
                     <div>
                     <div class="flex flex-col gap-4 max-w-3xl items-start">
@@ -76,7 +76,7 @@ Join us weekly for lessons, workshops, and contests.
                 </div>
                 <Image priority alt="Game jam poster" src={gameJamImage} class="xl:sticky xl:top-8 w-full sm:max-w-5/7 mx-auto xl:max-w-2/5 mb-8 xl:my-0 xl:ml-12" />
             </div>
-            <div class="hline mx-5 sm:mx-17 my-8" />
+            <div class="hline mx-5 sm:mx-13 my-8" />
             <div class="flex flex-col-reverse xl:flex-row items-center justify-between pt-0 p-5 sm:px-17">
                 <article class="flex flex-col gap-4 items-start max-w-3xl">
                     <h2 class="text-3xl font-bold">hack::peel</h2>
