--- a/src/pages/game-jam.astro
+++ b/src/pages/game-jam.astro
@@ -48,7 +48,7 @@ import { FaExternalLinkAlt } from "react-icons/fa";
 
                         
                         <div class="flex flex-row gap-4 items-start mt-4 max-w-full flex-wrap">
-                            <a href="http://localhost:4321/posts/2025-10-25-game-jam-results" class="btn text-brand border-brand shadow-brand" role="button">
+                            <a href="/posts/2025-10-25-game-jam-results" class="btn text-brand border-brand shadow-brand" role="button">
                                 Winners <FaAngleRight />
                             </a>
                             <a href="https://itch.io/jam/woodlands-cs-club-jam-2025" class="btn" role="button">View on Itch.io <FaExternalLinkAlt /></a>
