--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -77,7 +77,7 @@ Join us weekly for lessons, workshops, and contests.
                 <Image priority alt="Game jam poster" src={gameJamImage} class="xl:sticky xl:top-8 w-full sm:max-w-5/7 mx-auto xl:max-w-2/5 mb-8 xl:my-0 xl:ml-12" />
             </div>
             <div class="hline mx-5 sm:mx-13 my-8" />
-            <div class="flex flex-col-reverse xl:flex-row items-center justify-between pt-0 p-5 sm:px-17">
+            <div class="flex flex-col-reverse xl:flex-row items-center justify-between pt-0 p-5 md:px-17">
                 <article class="flex flex-col gap-4 items-start max-w-3xl">
                     <h2 class="text-3xl font-bold">hack::peel</h2>
                     <p>
